--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>云雷达4.26</title>
+  <title>单兵作战同步卫星v2.6</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/openlayers@4.6.4/dist/ol.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css" />
@@ -34,9 +34,10 @@
   <div id="app">
     <div class="sidenav" id="navBox" style="display:none;">
       <section class="section">
-        <h1 class="title STYLE4">云雷达4.26</h1>
+        <h1 class="title STYLE4">单兵作战同步卫星v4.29</h1>
         <h1 class="title STYLE1">大吉大利</h1>
-         <h1 class="title STYLE1">晚上吃鸡</h1>	  
+         <h1 class="title STYLE1">晚上吃鸡！垃圾千城</h1>
+          <h1 class="title STYLE1">私人定制</h1>	  
         <!-- <div class="field is-grouped">
           <a class="button is-small">Button</a>
           <a class="button is-small">Button2</a>
@@ -103,7 +104,7 @@
           <input type="checkbox" id="showPan" v-model="showPan"><label for="showPan">平底锅</label>
 
         <hr>
-        <label class="label">刷新率:</label>
+        <label class="label">地图刷新率:</label>
           <a class="button is-small" @click="setFPS(5)">fps5</a>
           <a class="button is-small" @click="setFPS(15)">fps15</a>
           <a class="button is-small" @click="setFPS(30)">fps30</a>
